[gd_scene load_steps=15 format=3 uid="uid://bkonodsggwbc6"]

[ext_resource type="Script" uid="uid://jaku77anwab0" path="res://GUI/player_hud/player_hud.gd" id="1_6ggty"]
[ext_resource type="StyleBox" uid="uid://cmvtuvru55oo0" path="res://GUI/pause_menu/panel_container_texture.tres" id="2_oghrr"]
[ext_resource type="Texture2D" uid="uid://cjikd2pge4imd" path="res://art/bars/redblue (3).png" id="4_yhjvm"]
[ext_resource type="Texture2D" uid="uid://b7mbno5xrfeyb" path="res://art/bars/redblue (1).png" id="5_sysqg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rxq5y"]
atlas = ExtResource("4_yhjvm")
region = Rect2(13, 47, 111, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bkpt"]
atlas = ExtResource("4_yhjvm")
region = Rect2(13, 47, 111, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_scbx3"]
atlas = ExtResource("5_sysqg")
region = Rect2(12, 68, 111, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_terqw"]
atlas = ExtResource("4_yhjvm")
region = Rect2(13, 54, 111, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea3vn"]
atlas = ExtResource("4_yhjvm")
region = Rect2(13, 54, 111, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m3x0"]
atlas = ExtResource("5_sysqg")
region = Rect2(12, 75, 110, 6)

[sub_resource type="Animation" id="Animation_yhjvm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sysqg"]
resource_name = "fade_to_black"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4b3j6"]
resource_name = "show_game_over"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sysqg"]
_data = {
&"RESET": SubResource("Animation_yhjvm"),
&"fade_to_black": SubResource("Animation_sysqg"),
&"show_game_over": SubResource("Animation_4b3j6")
}

[node name="PlayerHud" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_6ggty")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CurrencyContainer" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_left = 5.0
offset_top = 619.0
offset_right = 481.0
offset_bottom = 679.0
scale = Vector2(0.7, 0.7)
theme_override_styles/panel = ExtResource("2_oghrr")
metadata/_edit_group_ = true

[node name="CurrencyLabel" type="Label" parent="Control/CurrencyContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "99999"

[node name="Bars" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 4.0
offset_top = 663.0
offset_right = 339.0
offset_bottom = 713.0

[node name="HealthBar" type="TextureProgressBar" parent="Control/Bars"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 111.0
offset_bottom = 8.0
scale = Vector2(3, 3)
value = 100.0
texture_under = SubResource("AtlasTexture_rxq5y")
texture_over = SubResource("AtlasTexture_5bkpt")
texture_progress = SubResource("AtlasTexture_scbx3")
texture_progress_offset = Vector2(0, 1)

[node name="HealthLabel" type="Label" parent="Control/Bars"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 2.0
offset_right = 106.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 20
text = "999/999
"

[node name="EdgePowerBar" type="TextureProgressBar" parent="Control/Bars"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 25.0
offset_right = 111.0
offset_bottom = 33.0
scale = Vector2(3, 3)
value = 100.0
texture_under = SubResource("AtlasTexture_terqw")
texture_over = SubResource("AtlasTexture_ea3vn")
texture_progress = SubResource("AtlasTexture_3m3x0")
texture_progress_offset = Vector2(0, 1)

[node name="EdgePowerLabel" type="Label" parent="Control/Bars"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 28.0
offset_right = 106.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 20
text = "999/999
"

[node name="EquippedItem" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 7.0
offset_top = 533.0
offset_right = 91.0
offset_bottom = 617.0

[node name="PanelContainer" type="PanelContainer" parent="Control/EquippedItem"]
layout_mode = 2
offset_right = 84.0
offset_bottom = 84.0
theme_override_styles/panel = ExtResource("2_oghrr")

[node name="EquippedItemTexture" type="TextureRect" parent="Control/EquippedItem/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1

[node name="ItemLabel" type="Label" parent="Control/EquippedItem"]
layout_mode = 2
offset_left = 7.0
offset_top = 3.0
offset_right = 71.0
offset_bottom = 19.0
text = "Item"

[node name="EquippedItemQuantity" type="Label" parent="Control/EquippedItem"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 2
vertical_alignment = 2

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Label" type="Label" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.5
offset_top = -210.0
offset_right = 152.5
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "GAME OVER
"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -82.0
offset_right = 81.5
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Return To Title"

[node name="FadeToBlack" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_sysqg")
}

[node name="FloorLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -264.0
offset_bottom = 44.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 44
text = "Current Floor: 1"

[connection signal="pressed" from="Control/GameOver/VBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
